--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "homepage": "https://lara-vel-dev.github.io/github-build-challenge/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,18 +13,15 @@
   "dependencies": {
     "@react-three/drei": "^9.121.2",
     "@react-three/fiber": "^8.17.12",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.3",
-    "sass": "^1.83.4",
-    "three": "^0.172.0",
     "axios": "^1.7.9",
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
-    "sass": "^1.83.4"
+    "react-router-dom": "^7.1.3",
+    "sass": "^1.83.4",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
